--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -4,9 +4,11 @@
 name: Node.js Package
 
 on:
-  release:
-    types: [created]
-
+#  release:
+#    types: [created]
+  push:
+      branches:
+        - github-actions
 jobs:
   build:
     runs-on: ubuntu-latest
