--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -49,4 +49,4 @@ jobs:
           echo registry=https://npm.pkg.github.com/@hgouveia >> .npmrc
           npm publish
         env:
-          NODE_AUTH_TOKEN: ${{github.token}}
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
