--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -45,7 +45,8 @@ jobs:
           registry-url: https://npm.pkg.github.com/
           scope: '@hgouveia'
       - run: npm install --no-optional
-      - run: echo "@hgouveia:registry=https://npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
+      - run: npm config set scope "@hgouveia"
+      - run: echo "@hgouveia:registry=https://npm.pkg.github.com/" > .npmrc
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{github.token}}
