--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -42,11 +42,11 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-          registry-url: https://npm.pkg.github.com/
+          registry-url: https://npm.pkg.github.com/@hgouveia
           scope: '@hgouveia'
       - run: npm install --no-optional
       - run: npm config set scope "@hgouveia"
-      - run: echo "@hgouveia:registry=https://npm.pkg.github.com/" > .npmrc
+      - run: echo "@hgouveia:registry=https://npm.pkg.github.com/@hgouveia/" > .npmrc
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{github.token}}
