--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -46,6 +46,7 @@ jobs:
           scope: '@hgouveia'
       - run: npm install --no-optional
       - run: npm config set scope "@hgouveia"
+      - run: npm config set //npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN
       - run: echo "@hgouveia:registry=https://npm.pkg.github.com/@hgouveia/" > .npmrc
       - run: npm publish
         env:
