--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-downloader-helper",
+  "name": "@hgouveia/node-downloader-helper",
   "version": "1.0.17",
   "description": "A simple http file downloader for node.js",
   "main": "./dist/index.js",
